--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,4 +7,7 @@ login:
 mainpage:
     path: /
     controller: App\Controller\MainPage::base
+redaction:
+    path: /save
+    controller: App\Controller\Save::save
 
